--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
     <nav>
         <div class="logo">
-            <h4>The Nav</h4>
+            <h4 class="m-0">The Nav</h4>
         </div>
-        <ul class="nav-links">
+        <ul class="nav-links m-0">
             <li>
-                <a href="#">Home</a>
+                <a href="#home">Home</a>
             </li>
             <li>
-                <a href="#about">About</a>
+                <a href="#about">About Me</a>
             </li>
             <li>
                 <a href="#projects">Projects</a>
@@ -40,7 +40,7 @@
         <section id="home">
             <div class="container">
                 <div class="row">
-                    <div class="col-2">
+                    <div class="d-flex">
                         <div class="links-section-left">
                             <ul class="social-links">
                                 <li>
@@ -62,7 +62,11 @@
     
                         </div>
                         <div class="links-section-right">
-                            <h1>hi</h1>
+                            <ul class="social-links">
+                                <li>
+                                    <p class="email">Ethanowicks9@gmail.com</p>
+                                </li>
+                            </ul>
     
                         </div>
                     </div>
