Add styling and text to home page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <div class="logo">
-            <h4 class="m-0">The Nav</h4>
+            <h4 class="m-0">&lt;Ethan/&gt;</h4>
         </div>
         <ul class="nav-links m-0">
             <li>
@@ -56,7 +56,7 @@
                                 </li>
                                 <li>
                                     <a href="">
-                                        <i class="fa-brands fa-instagram"></i>
+                                        <i class="fa-regular fa-envelope"></i>
                                     </a>
                                 </li>
                             </ul>
@@ -72,8 +72,15 @@
                         </div>
                     </div>
                     <div class="col-10">
-                        <h1>hi</h1>
-                        <p>tesktpose tkpsiejt poisk</p>
+                        <div class="styling m-3">
+                            <p class="red-text">Hi, my name is</p>
+                            <h1 class="home-title">Ethan Wicks</h1>
+                            <h2 class="home-subtitle">I love what I do</h2>
+                            <p class="text mb-5">I am Software Developer specializing in building (and occasionally designing ) web applications. <br> Currently searching for a junior developer role. </p>
+    
+                            <a href="#projects" class="home-btn">View My Projects</a>
+                        </div>
+                       
                     </div>
                 </div>
             </div>
