--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
 
     <div class="main-container">
-        <section id="home" class="hidden">
+        <section id="home">
             <div class="container">
                 <div class="row">
                     <div class="d-flex">
@@ -72,7 +72,7 @@
     
                         </div>
                     </div>
-                    <div class="col-10">
+                    <div class="col-10 hidden">
                         <div class="styling m-3">
                             <p class="red-text">Hi, my name is</p>
                             <h1 class="home-title">Ethan Wicks</h1>
@@ -89,8 +89,8 @@
         </section>
     
         <section id="about" class="hidden">
+            <div class="container">
             <h2 class="numbered-heading">About me </h2>
-            <div class="container-fluid">
                 <div class="row">
                     <div class="col-6 mr-2">
                         <p class="text">Hello, my name is Ethan Wicks. I enjoy building things on the internet</p>
