Add js change email color

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 </li>
                                 <li>
                                     <a href="">
-                                        <i class="fa-regular fa-envelope"></i>
+                                        <i id="email-button" class="fa-regular fa-envelope"></i>
                                     </a>
                                 </li>
                             </ul>
@@ -102,15 +102,28 @@
                         </ul>
                     </div>
                     <div class="col-6">
-                        <h3>lolo</h3>
                         <img src="assets/images/profile-pic.jpg" class="profile-pic" alt="">
                     </div>
                 </div>
             </div>
         </section>
         <section id="projects" class="hidden">
-            <h1>hi</h1>
-            <p>kmfd slkdf msdkf msldfk msdlfk sodf kjsdof ijsdof jsdif osdfij sodif jsodfijsdof ijsdfo isdj </p>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h1 class="numbered-heading">Some things I have built</h1>
+            
+                        <img src="assets/images/brown-t-shirt.png" class="projects-img" alt="">
+                        <div class="vertical-line">
+                        </div>
+                        <p class="project-text">paskd paskd paoskd paosdk paokds a</p>
+                    </div>
+                </div>
+            </div>
+            
+        </section>
+        <section id="Contact">
+
         </section>
     </div>
 
