--- a/index.html
+++ b/index.html
@@ -121,8 +121,12 @@
                             <h3 class="project-title">HEre is example</h3>
                             <p class="project-text">paskd paskd paoskd paosdk paokds a <br> sdfsd fsdf sdf sdf sdf sdf sbr sfsd fsdf sdf sdf sdf sdf ssdf sdf sdf s sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf</p>
                             <i class="fa-solid fa-grip-lines arrow"></i>
-                            <p class="project-text">Tech Used</p>
-                            <a class="tech-buttons" href="">test</a>
+                            <div class="test-btn">
+                                <a class="tech-buttons" href="">Django</a>
+                                <a class="tech-buttons" href="">Python</a>
+                                <a class="tech-buttons" href="">Postgresql</a>
+
+                            </div>
                             <a class="proj1-repo" href="">
                                 <i class="fa-brands fa-github"></i>
                             </a>
