Add real text and vid

--- a/index.html
+++ b/index.html
@@ -114,10 +114,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <div class="project-1">
-                            <h1 class="numbered-heading">Some things I have built</h1>
-                            <img src="assets/images/proj-1-pic.png" class="projects-img" alt="">
-                        </div>
+                        <video autoplay loop muted class="project-video">
+                            <source src="assets/videos/ivory-vid.mov" class="project-video" type="video/mp4">
+                        </video>
                     </div>
                 </div>
                 <div class="row">
@@ -125,16 +124,19 @@
                         <div class="vertical-line"></div>
                     </div>
                     <div class="col-8 my-5">
-                        <h1 class="mt-5">testing</h1>
-                        <p class="project-text">paskd paskd paoskd paosdk paokds a <br> sdfsd fsdf sdf sdf sdf sdf sbr sfsd fsdf sdf sdf sdf sdf ssdf sdf sdf s sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf</p>
+                        <h1 class="mt-5">Ivory (E-commerce website)</h1>
+                        <p class="project-text">I have created a fully functioning e-commerce website that includes stripe payments, user authentication, crud functionality, filtering functionality for all clothing and confirmation emails for all orders.</p>
                         <div class="tech-btns">
                             <a class="tech-buttons" href="">Django</a>
                             <a class="tech-buttons" href="">Python</a>
                             <a class="tech-buttons" href="">Postgresql</a>
                         </div>
                         <div class="links">
-                            <a target="_blank" class="proj-link mt-4" href="">
+                            <a target="_blank" class="proj-link" href="https://github.com/Ewicks/Ivory-e-commerce">
                                 <i class="fa-brands fa-github"></i>
+                            </a>
+                            <a target="_blank" class="proj-link mt-4" href="https://ivory-e-commerce.herokuapp.com/">Open Project
+                                <i class="fa-solid fa-arrow-right open-arrow"></i>
                             </a>
                         </div>
                     </div>
@@ -145,15 +147,15 @@
             <div class="row my-5">
                 <div class="col-12 my-5">
                     <video autoplay loop muted class="project-video">
-                        <source src="assets/videos/ivory-vid.mov" class="project-video" type="video/mp4">
+                        <source src="assets/videos/universal.mov" class="project-video" type="video/mp4">
                     </video>
                 </div>
             </div>
             <div class="row">
                 <div class="col-4"></div>
                 <div class="col-8 my-5">
-                    <h1 class="mt-5">testing</h1>
-                    <p class="project-text">paskd paskd paoskd paosdk paokds a <br> sdfsd fsdf sdf sdf sdf sdf sbr sfsd fsdf sdf sdf sdf sdf ssdf sdf sdf s sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf sdf</p>
+                    <h1 class="mt-5">Universal Blog website</h1>
+                    <p class="project-text">This Blog website contains a page blog page that has a search bar so a user can search for a specific article or search for articles that contain a key word. The website requires user authentication when creating a post, commenting, liking, editing or deleting a post. There is also a latest post and category widgets which filters the post according to the user&#39;s preferred topic of post.</p>
                     <div class="tech-btns mb-3">
                         <a class="tech-buttons" href="">Django</a>
                         <a class="tech-buttons" href="">Python</a>
@@ -334,7 +336,7 @@
                     <div class="col-12">
                         <div class="contact-form p-5">
                             <h2 class="contact-title">Get In Touch</h2>
-                            <p class="my-5">iajsd asd aosidjasd asdi jasd aisdj oasdij asoija sodija sodijas odijas doijaso dijas doija <br>sdf sdf sdf sdf sd </p>
+                            <p class="my-5">Please feel free to send me an email using the button below, I am more than happy to answer any questions. <br> Happy Coding!  </p>
                            <a class="email-link" href="mailto:ethanowicks9@gmail.com" rel="noopener noreferrer" target="_blank">Say Hello</a>
                         </div>
                        
