Add accurate links to project 2

--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
                         <a class="tech-buttons" href="">Postgresql</a>
                     </div>
                     <div class="links">
-                        <a target="_blank" class="proj-link" href="https://github.com/Ewicks/Ivory-e-commerce">
+                        <a target="_blank" class="proj-link" href="https://github.com/Ewicks/universal-blogs-project-4">
                             <i class="fa-brands fa-github"></i>
                         </a>
-                        <a target="_blank" class="proj-link mt-4" href="https://ivory-e-commerce.herokuapp.com/">Open Project
+                        <a target="_blank" class="proj-link mt-4" href="https://universal-blogs-project-4.herokuapp.com/">Open Project
                             <i class="fa-solid fa-arrow-right open-arrow"></i>
                         </a>
                     </div>
@@ -211,30 +211,7 @@
                   <div class="col-xs-12 col-sm-6 col-md-4">
                     <!-- Card -->
                     <div class="card p-3">
-                        <div class="top-half d-flex justify-content-between ">
-                            <div class="d-flex justify-content-center">
-                                <p class="m-0">test</p>
-                            </div>
-                            <div class="d-flex justify-content-center">
-                                <i class="fa-brands fa-github m-0"></i>
-                                <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                            </div>
-                        </div>
-                        <div class="card-body">
-                        <h4 class="card-title">1 Card title</h4>
-                        <p class="card-text mb-5">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <p class="card-technologies m-0">Technologies </p>
-                        </div>
-                    </div>
-                  </div>
-                
-                  <div class="col-xs-12 col-sm-6 col-md-4">
-                    <!-- Card -->
-                    <div class="card p-3">
-                        <div class="top-half d-flex justify-content-between ">
-                            <div class="d-flex justify-content-center">
-                                <p class="m-0">test</p>
-                            </div>
+                        <div class="top-half d-flex justify-content-end">
                             <div class="d-flex justify-content-center">
                                 <i class="fa-brands fa-github m-0"></i>
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
@@ -251,10 +228,24 @@
                   <div class="col-xs-12 col-sm-6 col-md-4">
                     <!-- Card -->
                     <div class="card p-3">
-                        <div class="top-half d-flex justify-content-between ">
+                        <div class="top-half d-flex justify-content-end">
                             <div class="d-flex justify-content-center">
-                                <p class="m-0">test</p>
+                                <i class="fa-brands fa-github m-0"></i>
+                                <i class="fa-solid fa-arrow-up-right-from-square"></i>
                             </div>
+                        </div>
+                        <div class="card-body">
+                        <h4 class="card-title">1 Card title</h4>
+                        <p class="card-text mb-5">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-technologies m-0">Technologies </p>
+                        </div>
+                    </div>
+                  </div>
+
+                   <div class="col-xs-12 col-sm-6 col-md-4">
+                    <!-- Card -->
+                    <div class="card p-3">
+                        <div class="top-half d-flex justify-content-end">
                             <div class="d-flex justify-content-center">
                                 <i class="fa-brands fa-github m-0"></i>
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
@@ -271,10 +262,7 @@
                   <div class="col-xs-12 col-sm-6 col-md-4">
                     <!-- Card -->
                     <div class="card p-3">
-                        <div class="top-half d-flex justify-content-between ">
-                            <div class="d-flex justify-content-center">
-                                <p class="m-0">test</p>
-                            </div>
+                        <div class="top-half d-flex justify-content-end">
                             <div class="d-flex justify-content-center">
                                 <i class="fa-brands fa-github m-0"></i>
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
@@ -291,10 +279,7 @@
                   <div class="col-xs-12 col-sm-6 col-md-4">
                     <!-- Card -->
                     <div class="card p-3">
-                        <div class="top-half d-flex justify-content-between ">
-                            <div class="d-flex justify-content-center">
-                                <p class="m-0">test</p>
-                            </div>
+                        <div class="top-half d-flex justify-content-end">
                             <div class="d-flex justify-content-center">
                                 <i class="fa-brands fa-github m-0"></i>
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
@@ -311,10 +296,7 @@
                   <div class="col-xs-12 col-sm-6 col-md-4">
                     <!-- Card -->
                     <div class="card p-3">
-                        <div class="top-half d-flex justify-content-between ">
-                            <div class="d-flex justify-content-center">
-                                <p class="m-0">test</p>
-                            </div>
+                        <div class="top-half d-flex justify-content-end">
                             <div class="d-flex justify-content-center">
                                 <i class="fa-brands fa-github m-0"></i>
                                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
