--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="container">
             <h2 class="numbered-heading">About me </h2>
                 <div class="row">
-                    <div class="col-6 mr-2">
+                    <div class="col-12 col-md-6 mr-2">
                         <div class="about-text">
                             <p class="text">Hello, my name is Ethan Wicks. I enjoy building things on the internet</p>
                             <p class="text">sa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem veli in ea voluptateur</p>
@@ -101,7 +101,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-6">
+                    <div class="col-xm-none col-md-6">
                         <div class="about-img">
                             <img src="assets/images/profile-pic.jpg" class="profile-pic" alt="">
                         </div>
