Add portfolio to projects

--- a/index.html
+++ b/index.html
@@ -242,6 +242,27 @@
                         </div>
                     </div>
                   </div>
+                   <div class="col-xs-12 col-sm-6 col-md-4">
+                    <!-- Card -->
+                    <div class="card p-3">
+                        <div class="top-half d-flex justify-content-end">
+                            <div class="d-flex justify-content-center">
+                                <a target="_blank" href="https://github.com/Ewicks/Portfolio">
+                                  <i class="fa-brands fa-github m-0"></i>
+                                </a>
+                                <a href="https://ethan-wicks-portfolio.netlify.app/">
+                                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                        <h4 class="card-title">Portfolio</h4>
+                        <hr class="card-hr">
+                        <p class="card-text mb-5">This portfolio was built to display all my projects for others to see.</p>
+                        <p class="card-technologies m-0">JavaScript | CSS | HTML</p>
+                        </div>
+                    </div>
+                  </div>
             </div>
         </section>
 
