--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         <!-- Projects -->
         <section id="projects" class="hidden">
             <div class="container">
+                <h1 class="project-title">Projects</h1>
                 <div class="row">
                     <div class="col-12">
                         <video autoplay loop muted class="project-video">
