Change home text

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <p class="red-text">Hi, my name is</p>
                             <h1 class="home-title">Ethan Wicks</h1>
                             <h2 class="home-subtitle">I love what I do</h2>
-                            <p class="text mb-5">I am Software Developer specializing in building <br> (and occasionally designing ) web applications. <br> Currently searching for a junior developer role. </p>
+                            <p class="text mb-5">I am Software Developer specializing in building <br> and designing web applications. <br> Currently searching for a junior developer role. </p>
                             <div class="home-btns">
                                 <a href="#projects" class="home-btn">View My Projects</a>
                                 <a target="_blank" type="application/pdf" href="assets/pdf/cv2023.pdf" class="cv-btn">CV</a>
