--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <title>Ethan Wicks</title>
 </head>
 <body>
+    <!-- Pre Loader -->
+    <aside id="preloader">
+        <figure id="loader">
+            <img src="https://miro.medium.com/max/1400/1*cD8WMb82cSXACDTG8mlWhw.gif" alt="Loader">
+        </figure>
+    </aside>
     <!-- Navbar -->
     <nav>
         <a href="#home" class="logo">
