--- a/index.html
+++ b/index.html
@@ -98,8 +98,11 @@
                 <div class="row">
                     <div class="col-12 col-md-6 mr-2">
                         <div class="about-text">
-                            <p class="text">Hello, my name is Ethan Wicks. I enjoy building things on the internet</p>
-                            <p class="text">sa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem veli in ea voluptateur</p>
+                            <p class="text">Hello, my name is Ethan Wicks. I enjoy building things on the internet. <br> I am eagerly seeking a Junior Developer role. Possesses a real passion for Software Development along with qualities such as having a positive, highly focused, can-do team player mentality with exceptional attention to detail. I&#39;m confident with HTML, CSS, JavaScript and Python from my study at Code Institute. I really love building and designing interactive websites and seeing my vision come to life.
+                                I have a genuine interest in solving real-world challenges and get a real buzz from building things that could make a difference to business, people and society. <br>
+                                I can't wait to begin my journey and acquire indispensable knowledge that will transform my skills into the stratosphere. I am today, a naturally conscientious employee that has the ambition to continue to better myself every day and a firm desire to help others thrive in my environment. <br>
+                                I love pushing the team to greater heights by helping colleagues out wherever I can. I always look to improve myself and others. My default answer to a question is 'yes', and I make big problems seem small. I am used to balancing large workloads alongside meeting deadlines consistently by working overtime or by prioritising tasks for the day.
+                            </p>
                         </div>
                         <ul>
                             <li>
